--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -2,3 +2,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Do+Hyeon&family=Fuzzy+Bubbles:wght@400;700&family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+@layer components {
+  input {
+    @apply p-4 shadow-md rounded-md;
+  }
+  input:focus, textarea:focus {
+    @apply outline-0;
+  }
+}
