--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -7,7 +7,7 @@
 
 @layer components {
   input {
-    @apply p-4 shadow-md rounded-md;
+    @apply p-4 shadow-md rounded-md w-full;
   }
   input:focus, textarea:focus {
     @apply outline-0;
