--- a/app/src/app/components/toolbar/toolbar.component.html
+++ b/app/src/app/components/toolbar/toolbar.component.html
@@ -1,10 +1,10 @@
 <header class="m-8 flex w-full flex-row items-center justify-end gap-4">
   <div
-    class="flex cursor-pointer rounded-full bg-bm-background-light p-3 text-center drop-shadow-sm">
+    class="flex cursor-pointer rounded-full bg-bm-background_light p-3 text-center drop-shadow-sm">
     <i class="bi-gear-fill h-8 w-8 text-3xl"></i>
   </div>
   <div
-    class="flex cursor-pointer rounded-full bg-bm-background-light p-3 text-center drop-shadow-sm">
+    class="flex cursor-pointer rounded-full bg-bm-background_light p-3 text-center drop-shadow-sm">
     <i class="bi-person-circle h-8 w-8 text-3xl mr-2"></i>
     <div class="leading-loose">parker@bakerymanager.com</div>
   </div>
