--- a/app/src/app/pages/home/home.page.html
+++ b/app/src/app/pages/home/home.page.html
@@ -1,1 +1,12 @@
-<p>Home Page</p>
+<div class="grid grid-cols-3 gap-4">
+  <bm-low-ingredients></bm-low-ingredients>
+  <bm-low-ingredients></bm-low-ingredients>
+  <bm-low-ingredients></bm-low-ingredients>
+  <div class="col-span-2">
+    <bm-low-ingredients></bm-low-ingredients>
+  </div>
+  <div>
+    <bm-low-ingredients></bm-low-ingredients>
+  </div>
+</div>
+
