--- a/app/src/app/pages/login/login.page.html
+++ b/app/src/app/pages/login/login.page.html
@@ -1,7 +1,7 @@
 <div
   class="flex h-screen w-screen flex-col items-center justify-center bg-gradient-to-br from-bm-yellow to-bm-brown">
   <div
-    class="flex-none rounded-lg bg-bm-background-light p-16 pb-4 drop-shadow-lg">
+    class="flex-none rounded-lg bg-bm-background_light p-16 pb-4 drop-shadow-lg">
     <div class="flex flex-col gap-4">
       <div class="flex">
         <h2
