Checking JWT and redirecting to login screen if expired. Configuring JWT expiry configured by dotenv. Some layout stuff carried over from last commit.

--- a/app/src/app/components/toolbar/toolbar.component.html
+++ b/app/src/app/components/toolbar/toolbar.component.html
@@ -6,6 +6,6 @@
   <div
     class="flex cursor-pointer rounded-full bg-bm-background_light p-3 text-center drop-shadow-sm">
     <i class="bi-person-circle h-8 w-8 text-3xl mr-2"></i>
-    <div class="leading-loose">parker@bakerymanager.com</div>
+    <div class="leading-loose">{{userStore.data?.user?.email}}</div>
   </div>
 </header>
