Making BaseModel properties optional. Adding Ingredient boilerplate code. Reading user's ingredients from api in new Ingredients page.

--- a/app/src/app/pages/ingredients/ingredients.page.html
+++ b/app/src/app/pages/ingredients/ingredients.page.html
@@ -4,27 +4,17 @@
       <table class="table-auto">
         <thead>
         <tr>
-          <th>Song</th>
-          <th>Artist</th>
-          <th>Year</th>
+          <th>Name</th>
+          <th>Description</th>
+          <th>Unit</th>
         </tr>
         </thead>
         <tbody>
-        <tr>
-          <td>The Sliding Mr. Bones (Next Stop, Pottersville)</td>
-          <td>Malcolm Lockyer</td>
-          <td>1961</td>
-        </tr>
-        <tr>
-          <td>Witchy Woman</td>
-          <td>The Eagles</td>
-          <td>1972</td>
-        </tr>
-        <tr>
-          <td>Shining Star</td>
-          <td>Earth, Wind, and Fire</td>
-          <td>1975</td>
-        </tr>
+          <tr *ngFor="let ingredient of ingredients">
+            <td>{{ingredient.name}}</td>
+            <td>{{ingredient.description}}</td>
+            <td>{{ingredient.defaultUnit.name}}s ({{ingredient.defaultUnit.abbr}})</td>
+          </tr>
         </tbody>
       </table>
     </div>
