--- a/app/src/app/pages/ingredients/ingredients.page.html
+++ b/app/src/app/pages/ingredients/ingredients.page.html
@@ -1,7 +1,11 @@
 <div class="grid grid-cols-3 gap-4">
   <div class="col-span-2">
-    <div class="bm-widget-container p-6">
-      <table class="table-auto">
+    <div class="bm-widget-container flex flex-col gap-4 p-6">
+      <div class="flex flex-row justify-between items-center">
+        <h3 class="text-3xl px-2">Ingredient List</h3>
+        <bm-button (bmClick)="openEditModal($event)" icon="bi-plus-circle">Add Ingredient</bm-button>
+      </div>
+      <table class="table-auto" [class.animate-pulse]="this.loading">
         <thead>
         <tr>
           <th>Name</th>
@@ -10,7 +14,10 @@
         </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let ingredient of ingredients">
+          <tr *ngIf="ingredients.length <= 0">
+            <td class="text-center" colspan="3">No Ingredients 😓</td>
+          </tr>
+          <tr class="hover:cursor-pointer" *ngFor="let ingredient of ingredients">
             <td>{{ingredient.name}}</td>
             <td>{{ingredient.description}}</td>
             <td>{{ingredient.defaultUnit.name}}s ({{ingredient.defaultUnit.abbr}})</td>
