--- a/app/src/app/components/ui/button/button.component.html
+++ b/app/src/app/components/ui/button/button.component.html
@@ -1,5 +1,5 @@
 <button
-  class="flex w-full flex-row items-center justify-center rounded-xl bg-bm-accent py-3 px-5 text-lg leading-tight text-bm-offwhite disabled:saturate-50 disabled:opacity-75 hover:saturate-200"
+  class="flex w-full flex-row items-center justify-center"
   (click)="bmClick.emit($event)"
   [disabled]="disabled">
   <i class="mr-2 shrink" *ngIf="icon" [class]="icon"></i>
