--- a/app/src/app/components/navigation/navigation.component.html
+++ b/app/src/app/components/navigation/navigation.component.html
@@ -7,9 +7,9 @@
       </li>
       <li *ngFor="let item of menuItems">
         <a
-          class="flex h-full flex-row items-center px-14 py-4"
+          class="flex h-full flex-row items-center px-14 py-4 hover:bg-bm-background_active_fadednahoe"
           [routerLink]="item.route"
-          routerLinkActive="bg-bm-background_active">
+          routerLinkActive="bg-bm-background_active hover:bg-bm-background_active">
           <i class="{{ item.icon }} flex mr-6 text-2xl"></i>
           <span class="">{{ item.label }}</span>
         </a>
