Enable upsert edit or delete on ingredients page.

--- a/app/src/app/components/add-ingredient/add-ingredient.dialog.html
+++ b/app/src/app/components/add-ingredient/add-ingredient.dialog.html
@@ -19,10 +19,10 @@
   <div>
     <select
       id="defaultUnit"
-      type="text"
-      formControlName="defaultUnit">
+      matNativeControl
+      formControlName="defaultUnitId">
       <option [value]="''">Select Default Unit...</option>
-      <option [value]="unit" *ngFor="let unit of units">{{unit.name}} ({{unit.abbr}})</option>
+      <option [ngValue]="unit.id" *ngFor="let unit of units">{{unit.name}} ({{unit.abbr}})</option>
     </select>
   </div>
   <div>
