--- a/app/src/app/components/add-ingredient/add-ingredient.dialog.html
+++ b/app/src/app/components/add-ingredient/add-ingredient.dialog.html
@@ -1,6 +1,6 @@
 <form class="grid grid-flow-row auto-rows-max gap-4" [formGroup]="form">
   <div>
-    <h3 class="text-2xl px-2 text-center">Add Ingredient</h3>
+    <h3 class="text-2xl px-2 text-center">{{data.ingredient ? 'Edit Ingredient' : 'Add Ingredient'}}</h3>
   </div>
   <div>
     <input
@@ -10,11 +10,11 @@
       formControlName="name" />
   </div>
   <div>
-    <input
+    <textarea
       id="description"
       type="text"
       placeholder="Description"
-      formControlName="description" />
+      formControlName="description"></textarea>
   </div>
   <div>
     <select
