--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -41,14 +41,14 @@ $app-theme: mat.define-light-theme((
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap');
 @layer components {
-  input {
+  input, select, textarea {
     @apply p-3 shadow-md rounded-md w-full;
+  }
+  textarea {
+    @apply -mb-2
   }
   input:focus, textarea:focus {
     @apply outline-0 scale-105 transition ease-in-out duration-300;
-  }
-  select {
-    @apply p-3 shadow-md rounded-md w-full;
   }
   select:focus {
     @apply outline-0 scale-105 transition ease-in-out duration-300;
