--- a/app/src/app/pages/ingredients/ingredients.page.html
+++ b/app/src/app/pages/ingredients/ingredients.page.html
@@ -2,7 +2,7 @@
   <div class="col-span-3">
     <div class="bm-widget-container flex flex-col gap-4 p-6">
       <div class="flex flex-row justify-between items-center">
-        <h3 class="text-3xl px-2">Ingredient List</h3>
+        <h3 class="text-3xl px-1">Ingredient List</h3>
         <bm-button (bmClick)="openEditModal($event)" icon="bi-plus-circle">Add Ingredient</bm-button>
       </div>
       <table class="table-auto" [class.animate-pulse]="this.loading">
@@ -21,8 +21,8 @@
           <tr (click)="openEditModal($event, ingredient)" class="hover:cursor-pointer hover:scale-[1.01] transition ease-in-out duration-100" *ngFor="let ingredient of ingredients">
             <td>{{ingredient.name}}</td>
             <td>{{ingredient.description}}</td>
-            <td>{{ingredient.defaultUnit?.name}}s ({{ingredient.defaultUnit?.abbr}})</td>
-            <td>{{ingredient.cost | currency}} per {{ingredient.defaultUnit?.abbr}}</td>
+            <td>{{ingredient.defaultUnit.name}}s ({{ingredient.defaultUnit.abbr}})</td>
+            <td>{{ingredient.cost | currency}} per {{ingredient.defaultUnit.abbr}}</td>
           </tr>
         </tbody>
       </table>
