--- a/app/src/app/pages/recipes/recipes.page.html
+++ b/app/src/app/pages/recipes/recipes.page.html
@@ -11,7 +11,7 @@
           <th>Name</th>
           <th>Description</th>
           <th>Retail Sale Price</th>
-          <th>Wholesale Sale Price</th>
+          <th>Wholesale Price</th>
         </tr>
         </thead>
         <tbody>
