--- a/app/src/app/components/navigation/navigation.component.html
+++ b/app/src/app/components/navigation/navigation.component.html
@@ -1,17 +1,18 @@
-<div class="flex h-full h-screen w-full flex-row">
+<div class="flex h-full w-full flex-row">
   <nav class="flex bg-bm-background_light py-14 drop-shadow-md">
     <ul>
       <li
-        class="my-4 mb-12 flex flex-row items-center justify-items-center px-14">
-        <img src="assets/logo.svg" class="w-40 flex-1" />
+        class="my-4 mb-12 flex flex-row items-center justify-items-center px-6 lg:px-14">
+        <img src="assets/logo.svg" class="w-20 lg:w-40 flex-1 hidden lg:inline-block" />
+        <h2 class="flex-1 text-2xl visible lg:hidden">BM</h2>
       </li>
-      <li *ngFor="let item of menuItems">
+      <li *ngFor="let item of menuItems" [matTooltip]="item.label">
         <a
-          class="flex h-full flex-row items-center px-14 py-4 hover:bg-bm-background_active_fadednahoe"
+          class="flex h-full flex-row items-center justify-center lg:justify-start px-4 lg:px-14 py-4 hover:bg-bm-background_active_fadednahoe"
           [routerLink]="item.route"
           routerLinkActive="bg-bm-background_active hover:bg-bm-background_active">
-          <i class="{{ item.icon }} flex mr-6 text-2xl"></i>
-          <span class="">{{ item.label }}</span>
+          <i class="{{ item.icon }} flex lg:mr-6 text-2xl"></i>
+          <span class="hidden lg:inline-block">{{ item.label }}</span>
         </a>
       </li>
     </ul>
