Ability to add ingredient to a recipe. Moved all seed data to separate migration file. Each migration now executes within an isolated transaction. Material component global options.

--- a/app/src/app/pages/recipes/recipe/recipe.page.html
+++ b/app/src/app/pages/recipes/recipe/recipe.page.html
@@ -27,7 +27,6 @@
       </div>
       <div class="flex flex-row items-center justify-between gap-4">
         <div class="w-full">
-          Retail Sale Price
           <label for="retailPrice">Retail Price</label>
           <input
             id="retailPrice"
@@ -37,7 +36,6 @@
             formControlName="retailPrice" />
         </div>
         <div class="w-full">
-          Wholesale Price
           <label for="wholesalePrice">Wholesale Price</label>
           <input
             id="wholesalePrice"
@@ -49,17 +47,19 @@
       </div>
     </form>
   </div>
-  <div
-    *ngIf="mode !== 'new'"
-    class="bm-widget-container flex-col gap-4 p-6">
-    <h3 class="px-1 text-3xl">Ingredients</h3>
+  <div *ngIf="mode !== 'new'" class="bm-widget-container flex flex-col gap-4 p-6">
+    <div class="flex flex-row justify-between items-center">
+      <h3 class="text-3xl px-1">Ingredient List</h3>
+      <bm-button (bmClick)="addIngredient($event)" icon="bi-plus-circle">Add Ingredient</bm-button>
+    </div>
     <table class="table-auto" [class.animate-pulse]="this.loading">
       <thead>
       <tr>
         <th>Name</th>
         <th>Description</th>
-        <th>Unit</th>
+        <th>Quantity</th>
         <th>Cost</th>
+        <th></th>
       </tr>
       </thead>
       <tbody>
@@ -67,15 +67,20 @@
         <td class="text-center" colspan="4">No Ingredients 😓</td>
       </tr>
       <tr
-        class="transition duration-100 ease-in-out hover:scale-[1.01] hover:cursor-pointer"
+        class="transition duration-100 ease-in-out hover:scale-[1.01]"
         *ngFor="let ingredient of this.form.get('ingredients')?.value">
-        <td>{{ingredient.name}}</td>
-        <td>{{ingredient.description}}</td>
+        <td>{{ingredient.ingredient.name}}</td>
+        <td>{{ingredient.ingredient.description}}</td>
         <td>
-          {{ingredient.defaultUnit.name}}s ({{ingredient.defaultUnit.abbr}})
+          {{ingredient.quantity}} {{ingredient.unit.abbr}}{{ingredient.quantity > 1 ? '(s)' : ''}}
         </td>
         <td>
-          {{ingredient.cost | currency}} per {{ingredient.defaultUnit.abbr}}
+          {{ingredient.quantity * ingredient.ingredient.cost | currency}}
+        </td>
+        <td>
+          <i
+            (click)="removeIngredient(ingredient)"
+            class="bi-trash3 mr-2 shrink cursor-pointer text-xl text-bm-error transition duration-100 ease-in-out hover:scale-[1.01]"></i>
         </td>
       </tr>
       </tbody>
