--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -97,7 +97,7 @@ table tbody tr td {
 }
 
 .bm-gradient-background-alt {
-  @apply bg-gradient-to-br from-bm-background_light to-bm-background_alt
+  @apply bg-gradient-to-br from-bm-background_light to-bm-offwhite
 }
 
 .bm-widget-container {
