--- a/app/src/app/components/ui/widgets/stat-box/stat-box.component.html
+++ b/app/src/app/components/ui/widgets/stat-box/stat-box.component.html
@@ -1,4 +1,4 @@
-<div class="bm-widget-container flex flex-row p-6 content-center justify-between items-center">
+<div class="bm-widget-container flex flex-row p-6 pb-4 content-center justify-between items-center">
   <i [class]="'text-7xl ' + icon + ' ' + colorClass"></i>
   <div class="gap-2 text-right">
     <div [class]="'flex-initial text-5xl font-bold ' + colorClass">{{statValue}}</div>
